--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ NODE_ENV = production
 PORT = 5000
 MONGO_URI = mongodb+srv://tawreedapp2024:tawreed123@tawreed.evrovyi.mongodb.net/?retryWrites=true&w=majority&appName=tawreed
 
-AWS_BUCKET = "mmhscrollsell"
+AWS_BUCKET = "tawreed-s3"
 AWS_BUCKET_REGION = 'ap-south-1'
-AWS_ACCESS_KEY = 'AKIARXWEM5F252SVNC6X'
-AWS_SECRET_KEY = '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'
+AWS_ACCESS_KEY = 'AKIA4MTWHO7BBON2ZSX4'
+AWS_SECRET_KEY = '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'
 SECRET = 
 SMTP_HOST = smtp.gmail.com
 SMTP_PORT = 465
